--- a/package.json
+++ b/package.json
@@ -7,5 +7,11 @@
     "start": "node app.js"
   },
   "author": "YourName",
-  "license": "AGPL-v3-or-later"
+  "license": "AGPL-v3-or-later",
+  "dependencies": {
+    "axios": "^1.9.0",
+    "express": "^5.1.0",
+    "node-schedule": "^2.1.1",
+    "user-agents": "^1.1.532"
+  }
 }
