--- a/package.json
+++ b/package.json
@@ -6,11 +6,16 @@
   "scripts": {
     "start": "node app.js"
   },
-  "author": "YourName",
+  "author": "BLxcwg666",
   "license": "AGPL-v3-or-later",
   "dependencies": {
     "axios": "^1.9.0",
+    "chalk": "4.1.0",
+    "cluster": "^0.7.7",
+    "compression": "^1.8.0",
+    "dotenv": "^16.5.0",
     "express": "^5.1.0",
+    "moment-timezone": "^0.5.48",
     "node-schedule": "^2.1.1",
     "user-agents": "^1.1.532"
   }
