--- a/package.json
+++ b/package.json
@@ -2,9 +2,13 @@
   "name": "bantrackerapi",
   "version": "1.0.0",
   "description": "A Hypixel Ban Tracker API For Ban Tracker Opai Client™ Extension",
-  "main": "app.js",
+  "main": "dist/index.js",
+  "bin": "dist/index.js",
   "scripts": {
-    "start": "node app.js"
+    "start": "node dist/index.js",
+    "build:ncc": "ncc build app.js -o dist",
+    "build:pkg": "pkg ./dist/index.js node18-linux",
+    "build": "npm run build:ncc && npm run build:pkg"
   },
   "author": "BLxcwg666",
   "license": "AGPL-v3-or-later",
@@ -18,5 +22,10 @@
     "moment-timezone": "^0.5.48",
     "node-schedule": "^2.1.1",
     "user-agents": "^1.1.532"
+  },
+  "pkg": {
+    "scripts": "dist/**/*.js",
+    "assets": "dist/**/*.json",
+    "outputPath": "build"
   }
 }
